--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,9 @@ h4 {
 }
 /* Ganador de la rifa */
 .ganador {
-    color: #0ACF83;
+    font-size: 50px;
+    color: #ffffff;
+    background-color: #4200FF;
 }
 
 label {
@@ -119,7 +121,7 @@ input:focus {
     border-radius: 4px;
 }
 
-form {
+.formularioRifa {
     display: flex;
     flex-direction: column;
     flex-wrap:wrap;
@@ -171,11 +173,6 @@ form {
 
 /* EJS */
 h5 {
-    position: absolute;
-    width: 436px;
-    height: 56px;
-    left: 422px;
-    top: 56px;
 
     font-family: Inter;
     font-style: normal;
@@ -190,24 +187,24 @@ h5 {
     color: #4200FF;
 }
 
-button{
-    position: absolute;
-    left: 45.61%;
-    right: 45.61%;
-    top: 85.28%;
-    bottom: 8.32%;
+.botonReset {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0, auto;
+    margin-top: 30px;
+}
 
+button{
     cursor:pointer;
 
     width: 120px;
     height: 40px;
     justify-content: center;
     
-    /* Black */
     
     background: #111111;
-    /* Tertiary Black */
-    
+
     border: 1px solid #CCCCCC;
     box-sizing: border-box;
     border-radius: 6px;
@@ -217,33 +214,50 @@ button{
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-
-    /* White */
 
     color: #FFFFFF;
 }
 
-button:hover {
+button :hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
 }
 
 .container {
-    text-align: center;
+    display: flexbox;
+    align-items: center;
 }
 
 table {
-    margin: 0, auto;
+    width: 100px;
+    height: 100px;
 
-    font-family: Roboto;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+
+    font-family: Inter;
     font-style: normal;
-    font-weight: 500;
+    font-weight: normal;
+}
+
+th {
+    background-color: #95A5A6;
     font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+
+
 
 }
 
-td {
+tr {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+}
 
+td {
+    height: 50px;
 }
